Version 2.3
???, 2011

New features, enhancements:
  * Integrated Appirater to prompt users to rate the app.
  * Added tips for using the variable scrubbing speed sliders added in v2.2.

Fixes:
  * Fix rendering problems for slider thumb.

Version 2.2
March 6, 2011

New features, enhancements:
  * Slider for subject distance and focal length tracks slower the further
    above or below the touch is from the slider. This is similar to how
    the slider behaves in the iOS iPod app.
  * Additional circle of confusion presets.

Version 2.1
November 23, 2010

New features, enhancements:
  * Display selected camera and lens in the main view.
  * Add option to display distance as feet and inches as well as decimal feet.
  * Slider limits round numbers as per the selected units.
  * Macro lens setting to give finer control over subject distance setting.

Version 2.0.2
September 26, 2010

New features, enhancements:
	  * Support for iOS 4
	  * Support for iPhone 4 retina display

Version 2.0.1
January 1, 2010

Fixes:
  * Bug 2924786 - The near and far depth of field limits are off for long subject distances.
  * Bug 2924792 - Distance slider thumb set incorrectly when starting app.
  
Version 2.0
December 7, 2009

New features, enhancements:
  * New 'Near+Far' view shows near and far limits as well as the total depth of 
    field.
  * Settings completely re-organized allowing selection from multiple cameras 
    and lenses with a minimum number of touches.
  * Configure multiple cameras using pre-set or custom CoC values.
  * Configure multiple zoom or prime lenses including aperture and focal 
    length values.
  * Sliders on calculator screen use settings from selected lens for more 
    accurate adjustments.
  * Increased sensitivity of the 'i' button to make it more responsive.

Version 1.0
February 22, 2009

New features, enhancements:
  * This is the first release of Field Tools for iPhone.