@@ -50,7 +50,8 @@ const extern float METRES_TO_CENTIMETRES;
 - (CGFloat)convertDistance:(CGFloat)distance toUnits:(DistanceUnits)units;
 
 - (NSString*)formatStringForFeet;
-- (NSString*)formatStringForMetric;
+- (NSString*)formatStringForMetres;
+- (NSString*)formatStringForCentimetres;
 
 @property(nonatomic) DistanceUnits distanceUnits;
 
