@@ -4,6 +4,7 @@ Version 2.3
 New features, enhancements:
   * Integrated Appirater to prompt users to rate the app.
   * Added tips for using the variable scrubbing speed sliders added in v2.2.
+  * Added centimetres as unit of measure.
 
 Fixes:
   * Fix rendering problems for slider thumb.
